--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 1.71429;
-	color: #9b9b9b;
+	color: #000;
 	background-color: #fff;
 }
 
@@ -1633,7 +1633,7 @@ label {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 22px;
-	color: #9b9b9b;
+	color: #000;
 	pointer-events: none;
 	z-index: 9;
 	transition: .3s;
@@ -3645,7 +3645,7 @@ dl {
 }
 
 .breadcrumbs-01 {
-	background-image: url(../images/breadcrumbs-01.jpg);
+	background-image: url(../images/banner2.png);
 }
 
 .breadcrumbs-02 {
@@ -7206,7 +7206,7 @@ html .range-50 > *:before {
 }
 
 html .range-50 > * {
-	margin-top: 50px;
+	margin-top: 30px;
 	pointer-events: auto;
 }
 
@@ -17263,9 +17263,11 @@ Version: 3.5.4 Timestamp: Sun Aug 30 13:30:32 EDT 2015
 .select2-container .select2-choice {
 	display: block;
 	position: relative;
-	color: #000;
+	color: #552FE8;
 	background-color: #f5f5f5;
-	padding: 12px 15px;
+	padding: 10px 65px;
+	border-radius: 4px;
+	border-color: #552FE8;
 	text-decoration: none;
 }
 
@@ -31720,3 +31722,5 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 		transform: translate(-100%, -60%);
 	}
 }
+
+
